--- a/src/templates/token-config.html
+++ b/src/templates/token-config.html
@@ -1,37 +1,73 @@
 <div class="form-group">
-    <label>{{localize "token-factions.label.factionsCustomDisable"}}</label>
-    <input type="checkbox"
-        data-edit="flags.token-factions.factionDisable"
-        name="flags.token-factions.factionDisable"
-        data-dtype="Boolean" {{factionDisableValue}}>
+    <label>
+        {{localize "token-factions.tokeconfig.disableBorder"}}
+    </label>
+    <input
+        type="checkbox"
+        data-edit="flags.token-factions.disableBorder"
+        name="flags.token-factions.disableBorder"
+        data-dtype="Boolean"
+        {{disableBorderValue}}
+    />
+</div>
+
+<div class="form-group">
+    <label>{{localize "token-factions.tokeconfig.customBorder"}}</label>
+    <input
+        type="checkbox"
+        data-edit="flags.token-factions.customBorder"
+        name="flags.token-factions.customBorder"
+        data-dtype="Boolean"
+        {{customBorderValue}}
+    />
+</div>
+
+<div class="form-group">
+    <label> {{localize "token-factions.tokeconfig.customColorInt"}} </label>
+    <input
+        type="color"
+        data-edit="flags.token-factions.customColorInt"
+        name="flags.token-factions.customColorInt"
+        data-dtype="String"
+        value="{{customColorInt}}"
+    />
+</div>
+
+<div class="form-group">
+    <label> {{localize "token-factions.tokeconfig.customColorExt"}} </label>
+    <input
+        type="color"
+        data-edit="flags.token-factions.customColorExt"
+        name="flags.token-factions.customColorExt"
+        data-dtype="String"
+        value="{{customColorExt}}"
+    />
 </div>
 <div class="form-group">
-    <label>{{localize "token-factions.label.factionsCustomColorTokenInt"}}</label>
-    <input type="color"
-        data-edit="flags.token-factions.factionCustomColorInt"
-        name="flags.token-factions.factionCustomColorInt"
-        data-dtype="String" value="{{currentCustomColorTokenInt}}"></input>
+    <label>
+        {{localize "token-factions.tokeconfig.customFrameOpacity"}}
+    </label>
+    <input
+        type="number"
+        min="0"
+        max="1"
+        step="0.1"
+        data-edit="flags.token-factions.customFrameOpacity"
+        name="flags.token-factions.customFrameOpacity"
+        data-dtype="Number"
+        value="{{customFrameOpacity}}"
+    />
 </div>
 <div class="form-group">
-    <label>{{localize "token-factions.label.factionsCustomColorTokenExt"}}</label>
-    <input type="color"
-        data-edit="flags.token-factions.factionCustomColorExt"
-        name="flags.token-factions.factionCustomColorExt"
-        data-dtype="String" value="{{currentCustomColorTokenExt}}"></input>
-</div>
-<div class="form-group">
-    <label>{{localize "token-factions.label.factionsCustomColorTokenFrameOpacity"}}</label>
-    <input type="number"
-        min="0" max="1" step="0.1"
-        data-edit="flags.token-factions.factionCustomFrameOpacity"
-        name="flags.token-factions.factionCustomFrameOpacity"
-        data-dtype="Number" value="{{currentCustomColorTokenFrameOpacity}}"></input>
-</div>
-<div class="form-group">
-<label>{{localize "token-factions.label.factionsCustomColorTokenBaseOpacity"}}</label>
-    <input type="number"
-        min="0" max="1" step="0.1"
-        data-edit="flags.token-factions.factionCustomBaseOpacity"
-        name="flags.token-factions.factionCustomBaseOpacity"
-        data-dtype="Number" value="{{currentCustomColorTokenBaseOpacity}}"></input>
+    <label> {{localize "token-factions.tokeconfig.customBaseOpacity"}} </label>
+    <input
+        type="number"
+        min="0"
+        max="1"
+        step="0.1"
+        data-edit="flags.token-factions.customBaseOpacity"
+        name="flags.token-factions.customBaseOpacity"
+        data-dtype="Number"
+        value="{{customBaseOpacity}}"
+    />
 </div>
