--- a/src/templates/token-config.html
+++ b/src/templates/token-config.html
@@ -7,7 +7,8 @@
         data-edit="flags.token-factions.disableBorder"
         name="flags.token-factions.disableBorder"
         data-dtype="Boolean"
-        {{disableBorderValue}}
+        value="{{disableBorder}}"
+        {{checked disableBorder}}
     />
 </div>
 
@@ -18,7 +19,8 @@
         data-edit="flags.token-factions.customBorder"
         name="flags.token-factions.customBorder"
         data-dtype="Boolean"
-        {{customBorderValue}}
+        value="{{customBorder}}"
+        {{checked customBorder}}
     />
 </div>
 
